add environment-driven CORS config and logout with revocable refresh tokens